# mdirac

./: .gitignore  .gitmodules  CMakeLists.txt  Dirac.h  FindMatlab.cmake  INSTALL  LICENSE  README  SConstruct  TODO  TimeStretchDirac.m  compile_timestretch.m  dirac.c  dirac.def  gen_dirac_outfiles.m  mDirac.c  mDirac.m  test_dirac.m
Win/: DiracLE.lib
src/: SConscript  mDirac.c  mDirac.def
